--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "i": "^0.3.7",
     "intellinode": "^1.3.7",
+    "lucide-react": "^0.271.0",
     "nanoid": "^4.0.2",
     "next": "13.4.19",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   }
 }
