--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.7",
