--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "i": "^0.3.7",
+    "immer": "^10.0.2",
     "intellinode": "^1.3.7",
     "lucide-react": "^0.271.0",
     "nanoid": "^4.0.2",
@@ -40,7 +41,9 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
